# PuissanceIV_Qt

./: .gitignore  Board.cpp  Board.hpp  BoardDetector.cpp  BoardDetector.hpp  CMakeLists.txt  CalibrationLogic.cpp  CalibrationLogic.hpp  CalibrationScreen.cpp  CalibrationScreen.hpp  CalibrationTestScreen.cpp  CalibrationTestScreen.hpp  Camera.cpp  Camera.hpp  CameraAi.cpp  CameraAi.hpp  CheckDevicesScreen.cpp  CheckDevicesScreen.hpp  ExplanationScreen.cpp  ExplanationScreen.hpp  GameLogic.cpp  GameLogic.hpp  GameScreen.cpp  GameScreen.hpp  GameUI.cpp  GameUI.hpp  IntroScreen.cpp  IntroScreen.hpp  MCTS.cpp  MCTS.hpp  MainMenu.cpp  MainMenu.hpp  MainWindow.cpp  MainWindow.hpp  MonteCarlo.cpp  MonteCarlo.hpp  Negamax.cpp  Negamax.hpp  Robot.cpp  Robot.hpp  (+7 more)
Model/: detect.py  detect_loader.py  detect_pipe.py
